// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[Bubble Rendering] renders Disabled without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-select disabled rcx-css-5gkzmp"
      disabled=""
    >
      <div
        class="rcx-box rcx-box--full rcx-select__wrapper rcx-css-bpb89k"
      >
        <input
          aria-haspopup="listbox"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-select__focus rcx-css-1l0s473"
          disabled=""
          placeholder="Placeholder here..."
          value=""
        />
        <div
          class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-6bg1ps"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
          >
            
          </i>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Bubble Rendering] renders Errored without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-select invalid rcx-css-5gkzmp"
    >
      <div
        class="rcx-box rcx-box--full rcx-select__wrapper rcx-css-bpb89k"
      >
        <input
          aria-haspopup="listbox"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-select__focus rcx-css-1l0s473"
          placeholder="Placeholder here..."
          value=""
        />
        <div
          class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-6bg1ps"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
          >
            
          </i>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Bubble Rendering] renders Normal without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-select rcx-css-5gkzmp"
    >
      <div
        class="rcx-box rcx-box--full rcx-select__wrapper rcx-css-bpb89k"
      >
        <input
          aria-haspopup="listbox"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-select__focus rcx-css-1l0s473"
          placeholder="Placeholder here..."
          value=""
        />
        <div
          class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-6bg1ps"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
          >
            
          </i>
        </div>
      </div>
    </div>
  </div>
</body>
`;
